[package]
name = "tower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = "0.4.8"
tokio ={version ="1", features=["full"]} 
hyper ={version="0.14.4", features= ["full"]}
log ="0.4.14"
futures="0.3.15"
